--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.6",
     "nodemon": "^2.0.2",
     "pg": "^8.0.0",
     "sequelize": "^5.21.5",
